force-app/main/default/objects/AccountTokenisation__c/AccountTokenisation__c.object-meta.xml
<CustomObject>
    <label>AccountTokenisation</label>
    <nameField>
        <label>AccountTokenisation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountTokenisation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>