force-app/main/default/objects/AccountTokenisation__c/fields/TokenisedShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>TokenisedShippingPostalCode__c</fullName>
    <label>TokenisedShippingPostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>