force-app/main/default/objects/AccountTokenisation__c/fields/TokenisedStreet__c.field-meta.xml
<CustomField>
    <fullName>TokenisedStreet__c</fullName>
    <label>TokenisedStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>